renames and cleanups

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#FFFFFF" name="theme-color"/>
-    <title>Spark</title>
+    <title>FeArKit</title>
     <script src="./ace.js"></script>
     <script src="./ext-modelist.js"></script>
 </head>
